[package]
name = "addressbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
calcard = "0.1.0"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.8"
log = "0.4.27"
miette = { version = "7.6.0", features = ["fancy"] }
tabled = "0.19.0"
thiserror = "2.0.12"
